[gd_scene load_steps=18 format=2]

[ext_resource path="res://Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://script/Player.gd" type="Script" id=2]
[ext_resource path="res://script/Main.gd" type="Script" id=3]
[ext_resource path="res://assets/PlaneMesh.tscn" type="PackedScene" id=4]
[ext_resource path="res://script/CoinSpawner.gd" type="Script" id=5]
[ext_resource path="res://assets/new_environment.tres" type="Environment" id=6]
[ext_resource path="res://script/ObstacleSpawner.gd" type="Script" id=7]
[ext_resource path="res://assets/CoinPanel.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/sound/swipe.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/sound/coin.wav" type="AudioStream" id=10]
[ext_resource path="res://assets/sound/crash.wav" type="AudioStream" id=11]
[ext_resource path="res://fonts/PixelOperator.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://assets/sound/click.wav" type="AudioStream" id=13]

[sub_resource type="BoxShape" id=1]

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.823529, 0.764706, 0.478431, 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 12 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 12 )

[node name="Main" type="Spatial"]
script = ExtResource( 3 )

[node name="Camera" type="InterpolatedCamera" parent="."]
transform = Transform( -1, -5.81212e-09, -8.72294e-08, 0, 0.997788, -0.0664829, 8.74228e-08, -0.0664829, -0.997788, 1, 5.043, -39.2134 )
environment = ExtResource( 6 )
target = NodePath("../Player/TargetCamera")
speed = 5.0
enabled = true

[node name="Plane" type="StaticBody" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="Plane"]
transform = Transform( 3, 0, 0, 0, 0.1, 0, 0, 0, 12, 0, 0, 0 )
shape = SubResource( 1 )

[node name="CSGMesh" parent="Plane/CollisionShape" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 3, 0, 0, 0.65 )
material = SubResource( 2 )

[node name="Player" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.427, -10 )
script = ExtResource( 2 )

[node name="TargetCamera" type="Spatial" parent="Player"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 2.5, -10.908 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.198392, -0.942605, -0.268583, -0.530932, -0.126987, 0.837846, -0.823864, 0.308821, -0.475265, -11.1517, 6.82959, -12.9173 )
light_color = Color( 0.792157, 0.764706, 0.764706, 1 )
shadow_enabled = true
shadow_bias = 0.0

[node name="ObstacleSpawner" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 15 )

[node name="Timer" type="Timer" parent="ObstacleSpawner"]
script = ExtResource( 7 )

[node name="CoinSpawner" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 20 )

[node name="Timer" type="Timer" parent="CoinSpawner"]
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CoinPanel" parent="CanvasLayer" instance=ExtResource( 8 )]

[node name="Restart" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnRestart" type="Button" parent="CanvasLayer/Restart"]
pause_mode = 2
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -100.0
margin_right = 100.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Restart/BtnRestart"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = -20.0
margin_right = 45.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 3 )
text = "Tap To Restart"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnPause" type="Button" parent="CanvasLayer/Pause"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
text = "||"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -44.0
margin_right = 20.0
margin_bottom = 44.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="Button" parent="CanvasLayer/PauseMenu"]
pause_mode = 2
anchor_left = 0.5
anchor_right = 0.5
margin_left = -55.0
margin_right = 55.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 4 )
text = "Resume"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="CanvasLayer/PauseMenu"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -55.0
margin_top = -30.0
margin_right = 55.0
custom_fonts/font = SubResource( 4 )
text = "Main Menu"

[node name="Swipe" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Crash" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 11 )
volume_db = -10.0

[node name="Coin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Click" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 13 )

[connection signal="pressed" from="CanvasLayer/Restart/BtnRestart" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Pause/BtnPause" to="." method="_on_BtnPause_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/MainMenu" to="." method="_on_MainMenu_pressed"]
